--- a/app/stylesheets/sass/modules/_m-products.sass
+++ b/app/stylesheets/sass/modules/_m-products.sass
@@ -7,6 +7,8 @@
   border-bottom: 1px solid white
   &.l-one-third
     border-right: 1px solid white
+    +media($tablet)
+      border-right-width: 0
   &.l-half
     border-right: 1px solid white
     border-bottom-width: 0
